--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
   <button class ='dark'>
     <i class="fas fa-sun fa-2x"></i>
   </button>
-  <body>
+  <body class="light-mode">
     <h1>Reminds</h1>
     <form action="/" method="post">
       <div class="md-form">
